[gd_scene load_steps=11 format=3 uid="uid://dclqgst1jm1x2"]

[ext_resource type="Script" uid="uid://b5cpf0modmfo8" path="res://scripts/combat_miniboss_01.gd" id="1_4k832"]
[ext_resource type="Texture2D" uid="uid://djf70ea8wt55s" path="res://assets/world_tileset.png" id="1_ncyaj"]
[ext_resource type="Script" uid="uid://ni1mvhrlqstc" path="res://scripts/door.gd" id="2_4k832"]
[ext_resource type="Texture2D" uid="uid://cnwo8hn31uj6f" path="res://assets/rogueliketilesx3_JoeCreates.png" id="3_0mnmy"]
[ext_resource type="Script" uid="uid://dx8bipfjoh4e" path="res://scripts/exit.gd" id="4_sqjyj"]
[ext_resource type="PackedScene" uid="uid://bxb1330drumyn" path="res://scenes/mini_boss.tscn" id="6_0mnmy"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ncyaj"]
texture = ExtResource("1_ncyaj")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_lok8d"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ncyaj")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fyrk5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1wawx"]

[node name="combat_miniboss_01" type="Node2D"]
script = ExtResource("1_4k832")

[node name="Miniboss_walls" type="TileMap" parent="."]
tile_set = SubResource("TileSet_lok8d")
format = 2

[node name="Door" type="Area2D" parent="."]
position = Vector2(222, 173)
script = ExtResource("2_4k832")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(4, 3)
shape = SubResource("RectangleShape2D_fyrk5")

[node name="Sprite2D" type="Sprite2D" parent="Door"]
position = Vector2(4, 3)
texture = ExtResource("3_0mnmy")
region_enabled = true
region_rect = Rect2(77.7966, 0.541828, 21.9258, 23.7919)

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(226, 146)

[node name="Exit" type="Area2D" parent="."]
position = Vector2(225, 15)
script = ExtResource("4_sqjyj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
shape = SubResource("RectangleShape2D_1wawx")

[node name="Sprite2D" type="Sprite2D" parent="Exit"]
texture = ExtResource("3_0mnmy")
region_enabled = true
region_rect = Rect2(51.6794, 0.670513, 22.8589, 25.6579)

[node name="Label" type="Label" parent="Exit"]
offset_left = 16.0
offset_top = 4.0
offset_right = 97.0
offset_bottom = 27.0
text = "Press E"

[node name="Label" type="Label" parent="."]
offset_left = 1.0
offset_top = 193.0
offset_right = 124.0
offset_bottom = 216.0
text = "Combat mini boss 01"

[node name="MiniBoss" parent="." instance=ExtResource("6_0mnmy")]

[connection signal="body_entered" from="Exit" to="Exit" method="_on_body_entered"]
[connection signal="body_exited" from="Exit" to="Exit" method="_on_body_exited"]
